# youbot-simple-system

./: .gitignore  README.md  Youbot.rviz  youbot.rviz
src/Debug/: approach_test(variavel).csv  approach_test.csv  approach_test01(zigzag).csv  detection_test(longe).csv  detection_test(perto).csv  planning_test(antigo).csv  planning_test01.csv  plot_approach_results.py  plot_detection_results.py  plot_planning_results.py
src/models/black_block/: model.sdf
src/models/block_marker/: model.config  model.sdf
src/models/block_marker/materials/scripts/: block_marker.material
src/models/block_test/: model.config  model.sdf
src/models/block_test/materials/scripts/: block_test.material
src/youbot_tools/: CMakeLists.txt  package.xml
src/youbot_tools/launch/: youbot_planning.launch  youbot_task.launch
src/youbot_tools/scripts/: approach_controller.py  approach_test.py  detection_test.py  forwardkinematics_server.py  go_to_custom_pose.py  go_to_pose_moveit_server.py  go_to_pose_server.py  gripper_node.py  pick_supervisor.py  planning_test.py  youbot_gripper.py  youbot_steering.py
src/youbot_tools/srv/: ApproachTag.srv  ForwardKinematics.srv  GoToPoseMoveIt.srv
src/youbot_tools/worlds/: youbot_task.world
src/youbot_vision/: CMakeLists.txt  package.xml
src/youbot_vision/launch/: proto-apriltag.launch  youbot_perception.launch
src/youbot_vision/scripts/: tag_pose.py  tag_poseV2.py
